platform/gitops-pipelines/delivery/clusters/cc-cluster/core-services/components/argocd/argocd-repo-server-settings.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "argocd-repo-server"
spec:
  template:
    spec:
      containers:
      - name: "argocd-repo-server"
