platform/gitops-pipelines/delivery/clusters/cc-cluster/core-services/components/argocd/deploykf-repo-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      securityContext:
        ## NOTE: this is required because we use a PVC for plugin assets but run as a non-root user,
        ##       which can result in permission errors for some types of StorageClass
        fsGroup: 999
      containers:
        - name: deploykf-plugin
          image: docker.io/buildpack-deps:bookworm-curl
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          command:
            - "/var/run/argocd/argocd-cmp-server"
          args:
            - "--loglevel"
            - "info"
          volumeMounts:
            ## argocd-repo-server
            - name: var-files
              mountPath: /var/run/argocd
            - name: plugins
              mountPath: /home/argocd/cmp-server/plugins
            - name: deploykf-plugin-tools
              mountPath: /usr/local/bin

            ## deploykf
            - name: deploykf-plugin-config
              mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: plugin.yaml
            - name: deploykf-plugin-assets
              mountPath: /.deploykf/assets

            ## helm
            - name: helm-working-dir
              mountPath: /helm-working-dir
      volumes:
        - name: deploykf-plugin-config
          configMap:
            name: argocd-deploykf-plugin
        - name: deploykf-plugin-tools
          emptyDir: {}
        - name: deploykf-plugin-assets
          persistentVolumeClaim:
            claimName: argocd-deploykf-plugin-assets
