platform/gitops-pipelines/delivery/clusters/cc-cluster/core-services/components/argocd/label-transformer.yaml
---
apiVersion: builtin
kind: LabelTransformer
metadata:
  name: argocd-common-labels
labels:
  cg-devx.cost-allocation.cost-center: "platform"
  cg-devx.metadata.owner: "<GITOPS_REPOSITORY_NAME>-admin"
  cg-devx.metadata.service: "continuous-delivery.argocd"
  cg-devx.metadata.version: "3.4.4"
fieldSpecs:
- path: metadata/labels
  create: true
- path: spec/template/metadata/labels
  create: true
  kind: Deployment
